--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-tooltip": "^5.10.0",
     "styled-components": "^5.3.8",
     "url-metadata": "^2.5.0",
+    "use-interval": "^1.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
